tests/ui/generics/generic-type-params-name-repr.stderr
error[E0308]: mismatched types
  --> $DIR/generic-type-params-name-repr.rs:13:25
   |
LL |     let _: Foo<isize> = ();
   |            ----------   ^^ expected `Foo<isize>`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `Foo<isize>`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/generic-type-params-name-repr.rs:20:31
   |
LL |     let _: Foo<isize, B, C> = ();
   |            ----------------   ^^ expected `Foo<isize>`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `Foo<isize>`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/generic-type-params-name-repr.rs:27:37
   |
LL |     let _: HashMap<String, isize> = ();
   |            ----------------------   ^^ expected `HashMap<String, isize>`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `HashMap<String, isize>`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/generic-type-params-name-repr.rs:32:51
   |
LL |     let _: HashMap<String, isize, Hash<String>> = ();
   |            ------------------------------------   ^^ expected `HashMap<String, isize>`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `HashMap<String, isize>`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/generic-type-params-name-repr.rs:39:31
   |
LL |     let _: Foo<A, isize, C> = ();
   |            ----------------   ^^ expected `Foo<A, isize>`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `Foo<A, isize>`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/generic-type-params-name-repr.rs:46:27
   |
LL |     let _: Foo<A, B, C> = ();
   |            ------------   ^^ expected `Foo`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `Foo`
           found unit type `()`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
